--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
           </div>
 
           <div class="clearfix">
-            <p style="text-align:justify">Hello! Welcome to my home on the internet. Nice to have you here.</p>
+            <p>Hello! Welcome to my home on the internet. Nice to have you here.</p>
 
-<p style="text-align:justify">My name is Arch and I am passionate about building Data Science and Analytics solutions. I have a Master’s in Industrial Engineering from Texas A&M University and a Bachelor's in Mechanical Engineering from NIT Surat. Check out my <b> Portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
+<p>My name is Arch and I am passionate about building Data Science and Analytics solutions. I have a Master’s in Industrial Engineering from Texas A&M University and a Bachelor's in Mechanical Engineering from NIT Surat. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
-<p style="text-align:justify">I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and various Widgets. </p>
+<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and various Widgets. </p>
 
-<p style="text-align:justify">I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
+<p>I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
-<p style="text-align:justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
+<p>If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
 <!-- <ul>
   <li>Contact me at <b>business.inquiry.spao@gmail.com</b> if interested!</li>
   <li>Some of the Ongoing works:
@@ -167,8 +167,8 @@
 
           </div>
 
-          <!-- News -->          
-          <!-- <div class="career-timeline">
+          <!-- Career Timeline -->          
+          <div class="career-timeline">
             <h2>Career Timeline</h2>
             <div class="table-responsive">
               <table class="table table-sm table-borderless"> 
@@ -182,37 +182,37 @@
                 <tr>
                   <th scope="row">Dec 2020</th>
                   <td>
-                    Graduated from Texas A&M University with MS in Industrial Engineering. 
+                    Graduated from Texas A&M University with a Master's in Industrial Engineering. 
  
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row">Mar 10, 2022</th>
+                  <th scope="row">Jul 2017</th>
                   <td>
-                    First Video: Applied K-Means Clustering in R to reach more than 10,000 views!
+                    Started Working at Dassault Systemes as an R&D Associate Engineer.
  
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row">Mar 1, 2022</th>
+                  <th scope="row">May 2017</th>
                   <td>
-                    <a class="news-title" href="/news/announcement_2/">A Not So Long Announcement.</a> 
+                    Graduated from NIT Surat with a Bachelor's in Mechanical Engineering. 
                   </td>
                 </tr> 
-                <tr>
+                <!-- <tr>
                   <th scope="row">Mar 1, 2022</th>
                   <td>
                     Website Created!
  
                   </td>
-                </tr> 
+                </tr>  -->
               </table>
             </div> 
-          </div> -->
+          </div>
 
           
           <!-- Social -->
-          <!-- <div class="social">
+          <div class="social">
             <div class="contact-icons">
             <a href="mailto:archdesai.ad@gmail.com" title="email"><i class="fas fa-envelope"></i></a>
             <a href="https://github.com/archd3sai" title="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
@@ -226,7 +226,7 @@
 
             </div>
             
-          </div> -->
+          </div>
         </article>
 
 </div>
