updated intro and timelines

--- a/index.html
+++ b/index.html
@@ -139,9 +139,11 @@
           <div class="clearfix">
             <p>Hello! Welcome to my home on the internet. Nice to have you here.</p>
 
-<p>My name is Arch and I am passionate about building Data Science and Analytics solutions. I have a Master’s in Industrial Engineering from Texas A&M University and a Bachelor's in Mechanical Engineering from NIT Surat. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
+<p>My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
 
-<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and various Widgets. </p>
+<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
+
+<p>I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
 <p>I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
@@ -169,32 +171,39 @@
 
           <!-- Career Timeline -->          
           <div class="career-timeline">
-            <h2>Career Timeline</h2>
+            <h3>career timeline</h3>
             <div class="table-responsive">
               <table class="table table-sm table-borderless"> 
                 <tr>
-                  <th scope="row">Jan 2021</th>
+                  <th scope="row">Jan 2021 - Present</th>
                   <td>
-                    Started working at Sparkcognition as a Data Scientist.
+                    Working at Sparkcognition as a Data Scientist.
  
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row">Dec 2020</th>
+                  <th scope="row">Oct 2019 - Aug 2020</th>
+                  <td>
+                    Worked at National Renewable Energy Laboratory as a Data Science Intern.
+ 
+                  </td>
+                </tr>
+                <tr>
+                  <th scope="row">Aug 2018 - Dec 2020</th>
                   <td>
                     Graduated from Texas A&M University with a Master's in Industrial Engineering. 
  
                   </td>
-                </tr> 
+                </tr>  
                 <tr>
-                  <th scope="row">Jul 2017</th>
+                  <th scope="row">Jul 2017 - Jul 2018</th>
                   <td>
-                    Started Working at Dassault Systemes as an R&D Associate Engineer.
+                    Worked at Dassault Systemes as an R&D Associate Engineer.
  
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row">May 2017</th>
+                  <th scope="row">Jun 2013 - May 2017</th>
                   <td>
                     Graduated from NIT Surat with a Bachelor's in Mechanical Engineering. 
                   </td>
