--- a/projects/index.html
+++ b/projects/index.html
@@ -9,8 +9,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Spencer  Pao | projects</title>
-    <meta name="author" content="Spencer  Pao" />
+    <title>Arch  Desai | portfolio</title>
+    <meta name="author" content="Arch  Desai" />
     <meta name="description" content="A growing collection of nifty projects" />
     <meta name="keywords" content="jekyll, jekyll-theme, academic-website, portfolio-website" />
 
