--- a/index.html
+++ b/index.html
@@ -118,13 +118,7 @@
 <figure>
 
   <picture>
-    <!-- <source media="(max-width: 480px)" srcset="/assets/img/prof_pic-480.webp" />
-    <source media="(max-width: 800px)" srcset="/assets/img/prof_pic-800.webp" />
-    <source media="(max-width: 1400px)" srcset="/assets/img/prof_pic-1400.webp" />
-    -->
-
-    <!-- Fallback to the original file -->
-    <img class="img-fluid z-dept-1 rounded" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
 
   </picture>
 
@@ -137,17 +131,17 @@
           </div>
 
           <div class="clearfix">
-            <p align="justify">Hello! Welcome to my home on the internet. Nice to have you here.</p>
+            <p>Hello! Welcome to my home on the internet. Nice to have you here.</p>
 
-<p align="justify">My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
+<p>My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
 
-<p align="justify">I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
+<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
 
-<p align="justify">I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
+<p>I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
-<p align="justify">I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
+<p>I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
-<p align="justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
+<p>If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
 <!-- <ul>
   <li>Contact me at <b>business.inquiry.spao@gmail.com</b> if interested!</li>
   <li>Some of the Ongoing works:
