--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" width="450" height="450">
 
   </picture>
 
@@ -133,15 +133,15 @@
           <div class="clearfix">
             <p>Hello! Welcome to my home on the internet. Nice to have you here.</p>
 
-<p>My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
+<p align="justify">My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
 
-<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
+<p align="justify">I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
 
-<p>I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
+<p align="justify">I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
-<p>I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
+<p align="justify">I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
-<p>If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
+<p align="justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
 <!-- <ul>
   <li>Contact me at <b>business.inquiry.spao@gmail.com</b> if interested!</li>
   <li>Some of the Ongoing works:
@@ -164,7 +164,7 @@
           </div>
 
           <!-- Career Timeline -->          
-          <div class="career-timeline">
+          <div class="news">
             <h3>career timeline</h3>
             <div class="table-responsive">
               <table class="table table-sm table-borderless"> 
