--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" width="450" height="450">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
 
   </picture>
 
