tried another pic

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
+    <img class="rounded-circle" src="/assets/img/prof_pic2.jpeg" alt="prof_pic2.jpeg">
 
   </picture>
 
@@ -131,7 +131,7 @@
           </div>
 
           <div class="clearfix">
-            <p>Hello! Welcome to my home on the internet. Nice to have you here.</p>
+            <p>Hello! Welcome to my home on the internet. Nice to have you here!</p>
 
 <p align="justify">My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
 
@@ -141,7 +141,7 @@
 
 <p align="justify">I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
-<p align="justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you.</p>
+<p align="justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you!</p>
 <!-- <ul>
   <li>Contact me at <b>business.inquiry.spao@gmail.com</b> if interested!</li>
   <li>Some of the Ongoing works:
