--- a/index.html
+++ b/index.html
@@ -114,11 +114,11 @@
         </header>
 
         <article>
-          <div class="profile float-right">
+          <div class="profile float-left">
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic2.jpeg" alt="prof_pic2.jpeg">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
 
   </picture>
 
@@ -225,7 +225,7 @@
             </div>
 
             <div class="contact-note">
-              The best way to contact me is through Email.
+              If you are looking to reach out, I'd prefer the email route!
 
             </div>
             
