--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
               </li> -->
 
               <!-- Other pages -->
-              <!-- <li class="nav-item ">
+              <li class="nav-item ">
                 <a class="nav-link" href="/projects/">portfolio</a>
-              </li> -->
+              </li>
 
               <!-- Toogle theme mode -->
               <div class="toggle-container">
@@ -114,11 +114,11 @@
         </header>
 
         <article>
-          <div class="profile float-left">
+          <div class="profile float-right">
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
+    <img class="rounded-circle z-depth-2" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
 
   </picture>
 
