--- a/projects/index.html
+++ b/projects/index.html
@@ -106,98 +106,86 @@
           <article>
             <!-- pages/projects.md -->
 <div class="projects">
-  <!-- Display categorized projects -->
-  <h2 class="category">fun</h2>
-  <!-- Generate cards for each project -->
-  <div class="grid">
-<!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
-<div class="grid-item">
-  <a href="/projects/1_project/">
-      <div class="card hoverable">
-<figure>
-
-  <picture>
-    <!-- <source media="(max-width: 480px)" srcset="/assets/img/12-480.webp" />
-    <source media="(max-width: 800px)" srcset="/assets/img/12-800.webp" />
-    <source media="(max-width: 1400px)" srcset="/assets/img/12-1400.webp" />
-    -->
-
-    <!-- Fallback to the original file -->
-    <img src="/assets/img/12.jpg" alt="project thumbnail">
-
-  </picture>
-
-</figure>
-
-        <div class="card-body">
-          <h2 class="card-title text-lowercase">Data Science</h2>
-          <p class="card-text">Encompasses Data Science applications</p>
-          <div class="row ml-1 mr-1 p-0">
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-<!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
-<div class="grid-item">
-  <a href="/projects/2_project/">
-      <div class="card hoverable">
-<figure>
-
-  <picture>
-    <!-- <source media="(max-width: 480px)" srcset="/assets/img/3-480.webp" />
-    <source media="(max-width: 800px)" srcset="/assets/img/3-800.webp" />
-    <source media="(max-width: 1400px)" srcset="/assets/img/3-1400.webp" />
-    -->
-
-    <!-- Fallback to the original file -->
-    <img src="/assets/img/3.jpg" alt="project thumbnail">
-
-  </picture>
-
-</figure>
-
-        <div class="card-body">
-          <h2 class="card-title text-lowercase">Computer Vision</h2>
-          <p class="card-text">Anything involving images</p>
-          <div class="row ml-1 mr-1 p-0">
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-<!-- _includes/projects.html -->
-<div class="grid-sizer"></div>
-<div class="grid-item">
-  <a href="/projects/3_project/">
-      <div class="card hoverable">
-<figure>
-
-  <picture>
-    <!-- <source media="(max-width: 480px)" srcset="/assets/img/7-480.webp" />
-    <source media="(max-width: 800px)" srcset="/assets/img/7-800.webp" />
-    <source media="(max-width: 1400px)" srcset="/assets/img/7-1400.webp" />
-    -->
-
-    <!-- Fallback to the original file -->
-    <img src="/assets/img/7.jpg" alt="project thumbnail">
-
-  </picture>
-
-</figure>
-
-        <div class="card-body">
-          <h2 class="card-title text-lowercase">FinTech</h2>
-          <p class="card-text">All things related to Finance &amp; Tech</p>
-          <div class="row ml-1 mr-1 p-0">
-          </div>
-        </div>
-      </div>
-    </a>
-</div>
-  </div>
+  <h2 id="achievements">Achievements</h2>
+  <ul>
+  <li>Recipient of Outstanding Master of Engineering - Industrial Engineering Student Award.</li>
+  <li><a href="https://phmpapers.org/index.php/phmconf/article/view/1292">Publication</a>: Prognosis of Wind Turbine Gearbox Bearing Failures using SCADA and Modeled Data, Proceedings of the Annual Conference of the PHM Society 2020, Vol. 12 No. 1.</li>
+  <li>Winner of a TAMU Datathon 2020 among 50+ teams.</li>
+  <li>Recipient of TAMU Scholarship and Fee Waiver for excellent academic performance (4.0 GPA).</li>
+  </ul>
+  <h2 id="projects">Projects</h2>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/telecom.jpg"> <strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
+  <p>In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
+  <h1 id="section"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/instacart.jpeg"> <strong><a href="https://github.com/archd3sai/Instacart-Market-Basket-Analysis">Instacart Market Basket Analysis</a></strong></p>
+  <p>The objective of this project is to analyze the 3 million grocery orders from more than 200,000 Instacart users and predict which previously purchased item will be in user's next order. Customer segmentation and affinity analysis are also done to study user purchase patterns.</p>
+  <h1 id="section-1"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/1_cEaeMuTvINqIgyYQMSJWUA.jpeg"> <strong><a href="https://github.com/archd3sai/News-Articles-Recommendation">Hybrid-filtering News Articles Recommendation Engine</a></strong></p>
+  <p>A hybrid-filtering personalized news articles recommendation system which can suggest articles from popular news service providers based on reading history of twitter users who share similar interests (Collaborative filtering) and content similarity of the article and user’s tweets (Content-based filtering).</p>
+  <h1 id="section-2"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/airplane.jpeg"> <strong><a href="https://github.com/archd3sai/Predictive-Maintenance-of-Aircraft-Engine">Predictive Maintenance of Aircraft Engine</a></strong></p>
+  <p>In this project I have used models such as RNN, LSTM, 1D-CNN to predict the engine failure 50 cycles ahead of its time, and calculated feature importance from them using sensitivity analysis and shap values. Exponential degradation and similarity-based models are also used to calculate its remaining life.</p>
+  <h1 id="section-3"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/960x0.jpg"> <strong><a href="https://github.com/archd3sai/Wind-Turbine-Power-Curve-Estimation">Wind Turbine Power Curve Estimation</a></strong></p>
+  <p>In this project, I have employed regression techniques to estimate the Power curve of an on-shore Wind turbine. Nonlinear trees based regression methods perform best as true power curve is nonlinear. XGBoost is implemented and optimized using GridSearchCV which yields lowest Test RMSE-6.404.</p>
+  <h1 id="section-4"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/phase1.jpg"> <strong><a href="https://github.com/archd3sai/Multivariate-Phase-1-Analysis">Multivariate Phase 1 Analysis</a></strong></p>
+  <p>Objective of this project is to identify the in-control data points and eliminate out of control data points to set up distribution parameters for manufacturing process monitoring. I utilized PCA for dimension reduction and Hotelling T2 and m-CUSUM control charts to established mean and variance matrices.</p>
+  <h1 id="section-5"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/gdp.jpg"> <strong><a href="https://github.com/archd3sai/Predicting-GDP-of-India">What's the GDP of India?</a></strong></p>
+  <p>Objective of this project is to perform predictive assesment on the GDP of India through an inferential analysis of various socio-economic factors. Various models are compared and Stepwise Regression model is implemented which resulted in 5.7% Test MSE.</p>
+  <h1 id="section-6"></h1>
+  <p><img align="left" width="250" height="150" src="https://github.com/archd3sai/Portfolio/blob/master/Images/loan.jpg"> <strong><a href="https://github.com/archd3sai/Loan-Default-Prediction">Loan Default Prediction</a></strong></p>
+  <p>In this project I applied various classification models such as Logistic Regression, Random Forest and LightGBM to detect consumers who will default the loan. SMOTE is used to combat class imbalance and LightGBM is implemented that resulted into the highest accuracy 98.89% and 0.99 F1 Score.</p>
+  <br />
+  
+  <h2 id="micro-projects">Micro Projects</h2>
+  <ul>
+  <li><h3 id="statistics-and-machine-learning">Statistics and Machine Learning</h3>
+  <ul>
+  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/genetic-algorithm.ipynb">Genetic Algorithm</a> : In this file, I have implemented simple genetic algorithm that finds out the list of numbers which equal to any specified number when summed together.</li>
+  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/Bayesian%20Statistics.ipynb">Bayesian Statistics</a> : In this file, I explored how bayesian statistics works and how prior assumption reflects posterior probabilities using Gun control example.</li>
+  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/GMM-EM.ipynb">Gaussian Mixture Model and Expectation Maximization</a>: In this file, I implemented Expectation Maximization algorithm to find out true distribution of one dimensional GMM of 2 gaussians.</li>
+  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/Linear%20Regression.ipynb">Linear Regression</a>: In this file, I aim to solve linear regression using analytical method and also by implementing gradient descent, stochastic gradient descent and minibatch gradient descent algorithms.</li>
+  <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/NN%20Implementation.ipynb">Neural Network Implementation</a>: In this file, I implemented simple neural network using forward propogation, backword propogation and optimization functions to predict the customer churn.</li>
+  </ul></li>
+  <li><h3 id="challenges">Challenges</h3>
+  <ul>
+  <li><a href="https://github.com/archd3sai/SQL">SQL Challenges</a>: This repository contains codes of online SQL challenges (From Hackerrank, Leetcode, Testdome, etc.) solved by me.</li>
+  <li><a href="https://github.com/archd3sai/DS-Challenges">Data Science Challenges</a>: This repository contains codes of online Data Science challenges (From Hackerrank, TestDome, etc.) solved by me.</li>
+  </ul></li>
+  <li><h3 id="ranking-algorithms">Ranking Algorithms</h3>
+  <ul>
+  <li><a href="https://github.com/archd3sai/Ranking-of-NFL-Teams-using-Markov-method/blob/master/Ranking%20of%20NFL%20teams%20Report.pdf">Ranking of NFL teams using Markov-chain methods</a> : In this project I implemented and compared three stationary distribution of Markov-chain based approaches to rank 32 NFL (National Football League) teams from "Best" to "Worst" using the scores of 2007 NFL regular season.</li>
+  <li><a href="https://github.com/archd3sai/Tennis-Players-Ranking/blob/master/TennisRanking.ipynb">Ranking of Tennis players</a> : Objective of this project is to rank all Tennis Players based on the matches they played in the year of 2018. This project comprises 4 approaches to rank Tennis players and I have tried to make these approaches more robust sequentially.</li>
+  </ul></li>
+  </ul>
+  <h2 id="core-competencies">Core Competencies</h2>
+  <ul>
+  <li><strong>Methodologies</strong>: Machine Learning, Deep Learning, Time Series Analysis, Natural Language Processing, Statistics, Explainable AI, A/B Testing and Experimentation Design, Big Data Analytics</li>
+  <li><strong>Languages</strong>: Python (Pandas, Numpy, Scikit-Learn, Scipy, Keras, Matplotlib), R (Dplyr, Tidyr, Caret, Ggplot2), SQL, C++</li>
+  <li><strong>Tools</strong>: MySQL, Tableau, Git, PySpark, Amazon Web Services (AWS), Flask, MS Excel</li>
+  </ul>
+  <h2 id="certificates">Certificates</h2>
+  <ul>
+  <li><a href="https://github.com/archd3sai/Portfolio/blob/master/Certificates/CertificateOfCompletion_Tableau%20Essential%20Training%202020.1.pdf">Tableau Essential Training By Linkedin</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Arch%20Desai%20-%20Machine%20Learning%20Explainability.png">Machine Learning Explainability By Kaggle</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/CertificateOfCompletion_Apache%20Pyspark%20By%20Example%20(2).pdf">Apache PySpark Training By Linkedin</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/CertificateOfCompletion_Sql%20Essential%20Training%202018%20(1).pdf">SQL Essential Training By Linkedin</a></li>
+  <li><a href="https://www.hackerrank.com/certificates/c0cda4c2f1b5">SQL Test By HackerRank</a></li>
+  <li><a href="https://www.testdome.com/cert/24cd496af7a24a8489a1fd5de791c392">SQL Test By Testdome</a></li>
+  <li><a href="https://www.testdome.com/cert/124165d7386d4f76be84c240e0547bd3">Data Science Test By Testdome</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Deep%20Learning%20Specialization.pdf">Deep Learning Specialization By deeplearning.ai</a>
+  <ul>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Neural%20Networks%20and%20Deep%20Learning.pdf">Neural Networks and Deep Learning</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Structuring%20Machine%20Learning%20Projects.pdf">Structuring Machine Learning Projects</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Improving%20Deep%20Neural%20Networks.pdf">Improving Deep Neural Networks</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Convolutional%20Neural%20Networks.pdf">Convolution Neural Networks</a></li>
+  <li><a href="https://github.com/archd3sai/Data-Science-Portfolio-Arch-Desai/blob/master/Certificates/Sequence%20Models.pdf">Sequence Models</a></li>
+  </ul></li>
+  <li><a href="https://courses.cognitiveclass.ai/certificates/bfc1df7e5d084a73b84223495263d0fe">Big Data 101 By Cognitiveclass.ai</a></li>
+  <li><a href="https://analytics.google.com/analytics/academy/certificate/kHYtirzEQV29uzNG8xSFXg">Google Analytics for Begineers By Google</a></li>
+  </ul>
 </div>
 
           </article>
