--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <figure>
 
   <picture>
-    <img class="rounded-circle z-depth-2" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" style="padding-left: 1em; padding-bottom: 1em;">
 
   </picture>
 
@@ -137,9 +137,9 @@
 
 <p align="justify">I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
 
-<p align="justify">I also like to work on various projects and businees problems of different industries. Check out my <b> portfolio </b> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
+<p align="justify">I also like to work on various projects and businees problems of different industries. Check out my <a href="https://archd3sai.github.io/projects/" target="_blank" rel="noopener noreferrer"> <b> portfolio </b></a> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
-<p align="justify">I am based out of San Francisco Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
+<p align="justify">I am based out of SF Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
 
 <p align="justify">If you are interested in having a conversation about almost anything, feel free to ping me. Thank you!</p>
 <!-- <ul>
