--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
 
             <div class="contact-note">
-              If you are looking to reach out, I'd prefer the email route!
+              The best way to contact me is through email.
 
             </div>
             
