--- a/projects/index.html
+++ b/projects/index.html
@@ -127,6 +127,18 @@
   
   <h2 id="projects">Projects</h2>
   
+  <div class="profile float-left">
+    <figure>
+    
+      <picture>
+        <img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;">
+      </picture>
+    </figure>
+    <div class="clearfix">
+      <p align="justify">In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
+    </div>
+
+
   <br>
   <p><img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
   <p align="justify">In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
