--- a/projects/index.html
+++ b/projects/index.html
@@ -128,6 +128,22 @@
   <h2 id="projects">Projects</h2>
   
   <br>
+
+  <p><strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
+  <div class="container">
+      <img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;">
+
+      <div class="text">
+        In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a>
+      </div>
+  </div>
+
+  <br>
+  <p><img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
+  <p>In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
+  <h1 id="section"></h1>
+
+  <br>
   <p><img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
   <p>In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
   <h1 id="section"></h1>
