--- a/projects/index.html
+++ b/projects/index.html
@@ -41,6 +41,14 @@
     <script src="/assets/js/theme.js"></script>
     <script src="/assets/js/dark_mode.js"></script>
     
+    <style>
+      @media (max-width:500px){
+        .projects img.projects {
+          width: 100%; 
+          height: auto; 
+        }
+      }
+    </style>
 
   </head>
 
@@ -227,6 +235,7 @@
   <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/Linear%20Regression.ipynb">Linear Regression</a>: In this file, I aim to solve linear regression using analytical method and also by implementing gradient descent, stochastic gradient descent and minibatch gradient descent algorithms.</li>
   <li><a href="https://github.com/archd3sai/Statistical-Methods/blob/master/NN%20Implementation.ipynb">Neural Network Implementation</a>: In this file, I implemented simple neural network using forward propogation, backword propogation and optimization functions to predict the customer churn.</li>
   </ul></li>
+  <br>
   <li><h4 id="challenges">Challenges</h4>
   <ul>
   <li><a href="https://github.com/archd3sai/SQL">SQL Challenges</a>: This repository contains codes of online SQL challenges (From Hackerrank, Leetcode, Testdome, etc.) solved by me.</li>
@@ -238,6 +247,7 @@
   <li><a href="https://github.com/archd3sai/Tennis-Players-Ranking/blob/master/TennisRanking.ipynb">Ranking of Tennis players</a> : Objective of this project is to rank all Tennis Players based on the matches they played in the year of 2018. This project comprises 4 approaches to rank Tennis players and I have tried to make these approaches more robust sequentially.</li>
   </ul></li>
   </ul>
+  <br>
   <h2 id="core-competencies">Core Competencies</h2>
   <ul>
   <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI</li>
