--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <figure>
 
   <picture>
-    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" style="padding-left: 1em; padding-bottom: 1em;">
+    <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" style="padding-left: 1em;">
 
   </picture>
 
