--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
 
 <p>I also like to work on various projects and businees problems of different industries. Check out my <a href="https://archd3sai.github.io/projects/" target="_blank" rel="noopener noreferrer"> <b> portfolio </b></a> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
-<p>I am based out of SF Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea.</p>
-
-<p>If you are interested in having a conversation about almost anything, feel free to ping me. Thank you!</p>
+<p>I am based out of SF Bay Area, CA and in my free time, I like to read, hike, travel, and explore different music genres over a cup of tea. If you are interested in having a conversation about almost anything, feel free to ping me. Thank you!</p>
 <!-- <ul>
   <li>Contact me at <b>business.inquiry.spao@gmail.com</b> if interested!</li>
   <li>Some of the Ongoing works:
