--- a/projects/index.html
+++ b/projects/index.html
@@ -170,46 +170,6 @@
         Objective of this project is to identify the in-control data points and eliminate out of control data points to set up distribution parameters for manufacturing process monitoring. I utilized PCA for dimension reduction and Hotelling T2 and m-CUSUM control charts to established mean and variance matrices.</p>
       </div>
   </div>
-
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/telecom.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Customer-Survival-Analysis-and-Churn-Prediction">Customer Survival Analysis and Churn Prediction</a></strong></p>
-  <p>In this project I have used survival analysis to study how the likelihood of the customer churn changes over time. I have also implementd a Random Forest model to predict the customer churn and deployed a model using flask webapp on Heroku. <a href="https://churn-prediction-app.herokuapp.com/">App</a></p>
-  <h1 id="section"></h1> -->
-
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/instacart.jpeg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Instacart-Market-Basket-Analysis">Instacart Market Basket Analysis</a></strong></p>
-  <p>The objective of this project is to analyze the 3 million grocery orders from more than 200,000 Instacart users and predict which previously purchased item will be in user's next order. Customer segmentation and affinity analysis are also done to study user purchase patterns.</p>
-  <h1 id="section-1"></h1> -->
-  
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/1_cEaeMuTvINqIgyYQMSJWUA.jpeg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/News-Articles-Recommendation">Hybrid-filtering News Articles Recommendation Engine</a></strong></p>
-  <p>A hybrid-filtering personalized news articles recommendation system which can suggest articles from popular news service providers based on reading history of twitter users who share similar interests (Collaborative filtering) and content similarity of the article and user’s tweets (Content-based filtering).</p>
-  <h1 id="section-2"></h1> -->
-  
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/airplane.jpeg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Predictive-Maintenance-of-Aircraft-Engine">Predictive Maintenance of Aircraft Engine</a></strong></p>
-  <p>In this project I have used models such as RNN, LSTM, 1D-CNN to predict the engine failure 50 cycles ahead of its time, and calculated feature importance from them using sensitivity analysis and shap values. Exponential degradation and similarity-based models are also used to calculate its remaining life.</p>
-  <h1 id="section-3"></h1> -->
-
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/960x0.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Wind-Turbine-Power-Curve-Estimation">Wind Turbine Power Curve Estimation</a></strong></p>
-  <p>In this project, I have employed regression techniques to estimate the Power curve of an on-shore Wind turbine. Nonlinear trees based regression methods perform best as true power curve is nonlinear. XGBoost is implemented and optimized using GridSearchCV which yields lowest Test RMSE-6.404.</p>
-  <h1 id="section-4"></h1> -->
-  
-  <!-- <br>
-  <p><img align="left" width="250" height="150" src="Images/phase1.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Multivariate-Phase-1-Analysis">Multivariate Phase 1 Analysis</a></strong></p>
-  <p>Objective of this project is to identify the in-control data points and eliminate out of control data points to set up distribution parameters for manufacturing process monitoring. I utilized PCA for dimension reduction and Hotelling T2 and m-CUSUM control charts to established mean and variance matrices.</p>
-  <h1 id="section-5"></h1>
-  
-  <br>
-  <p><img align="left" width="250" height="150" src="Images/gdp.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Predicting-GDP-of-India">What's the GDP of India?</a></strong></p>
-  <p>Objective of this project is to perform predictive assesment on the GDP of India through an inferential analysis of various socio-economic factors. Various models are compared and Stepwise Regression model is implemented which resulted in 5.7% Test MSE.</p>
-  <h1 id="section-6"></h1>
-  
-  <br>
-  <p><img align="left" width="250" height="150" src="Images/loan.jpg" style="padding-right: 1em;"> <strong><a href="https://github.com/archd3sai/Loan-Default-Prediction">Loan Default Prediction</a></strong></p>
-  <p>In this project I applied various classification models such as Logistic Regression, Random Forest and LightGBM to detect consumers who will default the loan. SMOTE is used to combat class imbalance and LightGBM is implemented that resulted into the highest accuracy 98.89% and 0.99 F1 Score.</p>
-  <br /> -->
   
   <h2 id="micro-projects">Micro Projects</h2>
   <ul>
@@ -237,9 +197,9 @@
   <br>
   <h2 id="core-competencies">Core Competencies</h2>
   <ul>
-  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI</li>
-  <li><strong>Languages</strong>: Python (Pandas, Numpy, Scikit-Learn, Scipy, Keras, Matplotlib), R (Dplyr, Tidyr, Caret, Ggplot2), SQL</li>
+  <li><strong>Languages</strong>: Python, R, SQL, </li>
   <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, ECR, ECS, EC2, Cloudwatch), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Flask, MS Excel</li>
+  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI, Big Data Analysis</li>
   </ul>
   
   <h2 id="certificates">Certificates</h2>
