--- a/projects/index.html
+++ b/projects/index.html
@@ -194,12 +194,12 @@
   <li><a href="https://github.com/archd3sai/Tennis-Players-Ranking/blob/master/TennisRanking.ipynb">Ranking of Tennis players</a> : Objective of this project is to rank all Tennis Players based on the matches they played in the year of 2018. This project comprises 4 approaches to rank Tennis players and I have tried to make these approaches more robust sequentially.</li>
   </ul></li>
   </ul>
-  <br>
+
   <h2 id="core-competencies">Core Competencies</h2>
   <ul>
-  <li><strong>Languages</strong>: Python, R, SQL, </li>
-  <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, ECR, ECS, EC2, Cloudwatch), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Flask, MS Excel</li>
-  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI, Big Data Analysis</li>
+  <li><strong>Languages</strong>: Python, R, SQL </li>
+  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI</li>
+  <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, ECR, ECS, EC2, Cloudwatch), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Flask, MS Excel, Tableau</li>
   </ul>
   
   <h2 id="certificates">Certificates</h2>
