--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
 
           <div class="clearfix">
-            <p>Hello! Welcome to my home on the internet. Nice to have you here!</p>
+            <p>Hello! Welcome to my home on the internet!</p>
 
 <p>My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
 
