--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
           </div>
 
           <div class="clearfix">
-            <p>Hello! Welcome to my home on the internet!</p>
+            <p>Hello! Welcome to my digital corner of the world!</p>
 
-<p>My name is Arch and I am passionate about building data science and analytics solutions. I have 2.5+ years of experience in the field of data science along with a master's in industrial engineering and a bachelor's in mechanical engineering.</p>
+<p>My name is Arch and I am passionate about building data science and analytics solutions. I have 4.5+ years of experience in the field of machine learning and software development. With a master's in industrial engineering and a bachelor's in mechanical engineering, my path has been largely self-directed, driven by a relentless quest for knowledge and a knack for solving complex data problems. </p>
 
-<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building end-to-end ML models, ETL pipelines, algorithms, KPIs, and Widgets. </p>
+<p>I am currently working as a Data Scientist at <a href="https://www.sparkcognition.com/" target="_blank" rel="noopener noreferrer">Sparkcognition</a> in the field of Renewable Energy. I primarily work on building Renewable AI Assistant powered by LLMs and RAG, end-to-end ML models, Scalable ETL pipelines, External APIs, algorithms, KPIs, and much more, always with an eye on the sustainable future of our planet. </p>
 
 <p>I also like to work on various projects and businees problems of different industries. Check out my <a href="https://archd3sai.github.io/projects/" target="_blank" rel="noopener noreferrer"> <b> portfolio </b></a> for all of my projects, micro-projects, skills, certificates, and achievements.</p>
 
@@ -237,7 +237,7 @@
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2022 Arch Desai. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="noopener noreferrer">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" target="_blank" rel="noopener noreferrer">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">GitHub Pages</a>.
+        © Copyright 2024 Arch Desai. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="noopener noreferrer">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" target="_blank" rel="noopener noreferrer">al-folio</a> theme. Hosted by <a href="https://pages.github.com/" target="_blank" rel="noopener noreferrer">GitHub Pages</a>.
 
       </div>
     </footer>
