--- a/projects/index.html
+++ b/projects/index.html
@@ -197,9 +197,9 @@
 
   <h2 id="core-competencies">Core Competencies</h2>
   <ul>
-  <li><strong>Languages</strong>: Python, R, SQL </li>
-  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, Statistics, Explainable AI</li>
-  <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, ECR, ECS, EC2, Cloudwatch), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Flask, MS Excel, Tableau</li>
+  <li><strong>Languages</strong>: Python, R, SQL, C++ </li>
+  <li><strong>Methodologies</strong>: Machine Learning, Time Series Analysis, Deep Learning, NLP, Statistics, Explainable AI</li>
+  <li><strong>Tools</strong>: Amazon Web Services (S3, Lambda, API Gateway, ECR, ECS, EC2, Cloudwatch, SNS, SQS), Docker, Airflow, Elasticsearch, PostgreSQL, Serverless, Travis CI, Git, Terraform, Flask, MS Excel, Tableau</li>
   </ul>
   
   <h2 id="certificates">Certificates</h2>
