--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                <div class="profile float-right">
                   <figure>
                      <picture>
-                        <img id="profileImage" class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" style="padding-left: 1em;">
+                        <img class="rounded-circle" src="/assets/img/prof_pic1.jpeg" alt="prof_pic1.jpeg" style="padding-left: 1em;">
                      </picture>
                   </figure>
                   <div class="address">
