--- a/projects/index.html
+++ b/projects/index.html
@@ -88,6 +88,10 @@
               <li class="nav-item active">
                 <a class="nav-link" href="/portfolio/">portfolio<span class="sr-only">(current)</span></a>
               </li>
+               <!-- publications -->
+              <li class="nav-item ">
+                <a class="nav-link" href="/publications/">publications</a>
+              </li>
 
               <!-- Toogle theme mode -->
               <div class="toggle-container">
