--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                profileImage.src = newSrc;
                profileImage.style.animationName = 'none';
              }, 1000); // Halfway through the animation
-           }, 1000000); // Change image every 2 seconds
+           }, 2000); // Change image every 2 seconds
          });
        </script>
    </body>
