--- a/projects/index.html
+++ b/projects/index.html
@@ -86,7 +86,7 @@
 
               <!-- Other pages -->
               <li class="nav-item active">
-                <a class="nav-link" href="/portfolio/">portfolio<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/projects/">portfolio<span class="sr-only">(current)</span></a>
               </li>
                <!-- publications -->
               <li class="nav-item ">
