--- a/publications/index.html
+++ b/publications/index.html
@@ -86,7 +86,7 @@
 
               <!-- Other pages -->
               <li class="nav-item ">
-                <a class="nav-link" href="/portfolio/">portfolio</a>
+                <a class="nav-link" href="/projects/">portfolio</a>
               </li>
 
               <li class="nav-item active">
